# mcp-server-ppt

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  FEATURES.md  LICENSE  PRIVACY.md  PptMcp.sln  README.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: ADR-001-NO-UNIT-TESTS.md  AGENT-CLIENT.md  ARCHETYPE-PIPELINE.md  AUTHOR.md  AZURE_SELFHOSTED_RUNNER_SETUP.md  BREAKING-CHANGES.md  CLAUDE-MCPB-SUBMISSION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  MCP_REGISTRY_PUBLISHING.md  NUGET-GUIDE.md  PRE-COMMIT-SETUP.md  RELEASE-STRATEGY.md  SECURITY.md  TEST-NAMING-STANDARD.md  TIMEOUT-IMPLEMENTATION-GUIDE.md  (+1 more)
llm-tests/: README.md  conftest.py  extract_failures.py  pyproject.toml
llm-tests/aitest-reports/: results.json
llm-tests/cli/: conftest.py  test_cli_calculation_mode.py  test_cli_chart.py  test_cli_chart_positioning.py  test_cli_file_slide.py  test_cli_file_worksheet.py  test_cli_financial_report_automation.py  test_cli_modification_patterns.py  test_cli_range.py  test_cli_sales_report_workflow.py  test_cli_styling.py  test_cli_table.py
llm-tests/mcp_tests/: test_mcp_calculation_mode.py  test_mcp_chart.py  test_mcp_chart_collision_detection.py  test_mcp_chart_positioning.py  test_mcp_file_slide.py  test_mcp_file_worksheet.py  test_mcp_financial_report_automation.py  test_mcp_modification_patterns.py  test_mcp_range.py  test_mcp_sales_report_workflow.py  test_mcp_screenshot_ab.py  test_mcp_styling.py  test_mcp_table.py
(+442 files in other folders)
